@@ -128,6 +128,7 @@ groups:
   g:bukkit_default:
     permissions:
     - bukkit.broadcast.user
+    - -bukkit.command.plugins
     
   g:bukkit_moderator:
     permissions:
